[modfiy] 將butter-sugar 全部改為 butter-sugar
